[package]
name = "arche"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A complete open source e-commerce solution."
homepage = "https://github.com/cinnabaris/arche"
license = "MIT"

[profile.release]
lto = true

[features]
default = ["db-pg", "st-fs", "ch-redis", "mq-rabbit"]
db-pg = ["diesel/postgres"]
db-my = ["diesel/mysql"]
st-fs = []
ch-redis = ["redis", "r2d2_redis"]
mq-rabbit = ["amqp"]
st-aws = ["rusoto_core", "rusoto_s3"]
ch-aws = ["rusoto_core", "rusoto_elasticache"]
mq-aws = ["rusoto_core", "rusoto_sqs", "rusoto_sns"]

[dependencies]
error-chain = "0.12"
hyper = "0.12"
toml = "0.4"
rust-ini = "0.10"
csv = "1"
byteorder = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.2"
r2d2 = "0.8"
r2d2_redis = {version = "0.7", optional=true}
redis = {version = "0.8", optional = true}
log = "0.4"
log4rs = "0.8"
sha2 = "0.7"
md-5 = "0.7"
base64 = "0.9"
hex = "0.3"
regex = "0.2"
flate2 = "1.0"
eui48 = "0.3"
geo = "0.7"
maxminddb = "0.9"
lettre = "0.8"
lettre_email = "0.8"
mime = "0.3"
rusoto_core = { version = "0.32", optional = true }
rusoto_sqs = { version = "0.32", optional = true }
rusoto_sns = { version = "0.32", optional = true }
rusoto_s3 = { version = "0.32", optional = true }
rusoto_elasticache = { version = "0.32", optional = true }
validator = "0.6"
validator_derive = "0.6"
language-tags = "0.2"
handlebars = "0.32"
juniper = "0.9"
robots_txt = "0.5"
sitemap = "0.2"
rss = "1.5"
frank_jwt = "*"
sodiumoxide = "*"
mustache = "*"

[dependencies.url]
version = "1.7"
features=["query_encoding"]

[dependencies.diesel]
version = "1.3"
features = ["chrono", "serde_json", "uuid", "network-address", "numeric", "r2d2", "128-column-tables"]
optional = true

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.amqp]
version = "0.1"
default-features = false
optional = true

[dependencies.uuid]
version = "0.6"
features = ["v4"]

[dependencies.epub]
git = "https://github.com/cinnabaris/epub.git"

[dependencies.stardict]
git = "https://github.com/cinnabaris/stardict.git"
