[package]
name = "arche"
version = "0.4.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
description = "A complete open source e-commerce solution built with Rust and React."
homepage = "https://github.com/cinnabaris/arche"
license = "MIT"

[features]
default = ["postgresql"]
postgresql = [
  "diesel/postgres",
  "nut/postgresql",
  "survey/postgresql"
]
mysql = [
  "diesel/mysql",
  "nut/mysql",
  "survey/mysql"
]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
juniper = "0.9"
juniper_rocket = "0.1"
toml = "0.4"
base64 = "0.9"
log = "0.4"
handlebars = "0.32"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.2"
sodiumoxide = "*"
log4rs = "0.8"
clap = "2.31"
nut = { path = "../plugins/nut" }
survey = { path = "../plugins/survey" }

[dependencies.amqp]
version = "0.1"
default-features = false

[dependencies.diesel]
version = "1.3"
features = ["chrono", "serde_json", "uuid", "network-address", "numeric", "r2d2", "128-column-tables"]
optional = true

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["json", "uuid", "handlebars_templates"]

[dependencies.rocket_cors]
git = "https://github.com/lawliet89/rocket_cors"
